# retailops-lakehouse

./: .env.example  .gitignore  .ruff.toml  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/seeds/: customers.csv  products.csv
data_gen/: produce_orders.py
scripts/: head_bronze.sh  logs.sh  run_bronze.sh  start_stack.sh  stop_stack.sh
spark_jobs/: bronze_orders.py
tests/: conftest.py  test_bronze_schema.py  test_bronze_stream_smoke.py  test_producer_build.py  test_producer_unit.py
