[tool.poetry]
name = "retailops-lakehouse"
version = "0.1.0"
description = "End-to-end Data & AI demo: Kafka → Spark → dbt → Airflow → FastAPI → ML"
authors = ["Önder <toeremis@outlook.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
ruff = "^0.13.1"
mypy = "^1.18.2"
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
